@@ -372,6 +372,7 @@
     * 3770 FIX: win_dhcp_pools: Fixed crash in case of empty DHCP pools
     * 3781 FIX: ipmi: made check more robust against incomplete datasets
     * 3700 FIX: FIX lparstat_aix.cpu_util usage of checkgroup parameters...
+    * 3798 FIX: Clusters: Fixed invalid timestamp of last cached agent data...
 
     Multisite:
     * 3187 notification view: new filter for log command via regex
